# Interview-Questions-

./: HCL_GO_Developer.py  STAN_CANADA_Question.py
AntimatterProject/: README.md  pyproject.toml  setup.cfg
AntimatterProject/antimatter/: .gitignore  envtool.py  test.py
AntimatterProject/antimatter/inventory_tool/: inventory_tool.py
AntimatterProject/antimatter/model/: entity.py
AntimatterProject/antimatter/tests/test_captures/: capture1  capture2  capture3
AntimatterProject/antimatter/tests/test_files/: test_file.txt  test_file_link  unreadable_file.txt
AntimatterProject/antimatter/utils/: utils.py
Kablamo/: Kablamo.go
