[project]
name = "envtools"
version = "0.0.1"
authors = [
  { name="Mayuresh Anand", email="anand0mayuresh@gmail.com" },
]
description = "Envtool package for antimatter"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]